--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
         <!-- Add your site or application content here -->
         <div class="background">
+            <h1>Hola soy el Rick</h1>
+            <h2>Ese soy yo</h2>
             <img src="img/logo.png">
         </div>
 
