--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 
         <!-- Add your site or application content here -->
         <div class="background">
-            <h1>Hola soy el Rick</h1>
-            <h2>Ese soy yo</h2>
             <img src="img/logo.png">
+            <h1><span class="blue-dark">diseño</span><span class="black">real</span><span class="blue-dark">para</span><span class="black">gente</span><span class="blue">real</span></h1>
+            <h2>En Contrucción</h2>
         </div>
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
