--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="background">
             <img src="img/logo.png">
             <h1><span class="blue-dark">diseño</span><span class="black">real</span><span class="blue-dark">para</span><span class="black">gente</span><span class="blue">real</span></h1>
-            <h2>En Contrucción</h2>
+            <h2>En Construcción</h2>
         </div>
 
 
