--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
 
         <!-- Add your site or application content here -->
         <div class="background">
-            <img src="img/logo.png">
+            <img src="img/logo.png" class="logo">
             <h1><span class="blue-dark">diseño</span><span class="black">real</span><span class="blue-dark">para</span><span class="black">gente</span><span class="blue">real</span></h1>
-            <h2>Coming Soon</h2>
+            <h2>Estamos generando diseño</h2>
+             <div class="redes">
+             <img src="img/icofaceb.png">
+             <img src="img/icotwitter.png">
+             <img src="img/icoLinkedin.png">
+             </div>
+             
+                        
         </div>
 
 
