--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>RLEAL Design</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,10 +24,9 @@
             <img src="img/logo.png" class="logo">
             <h1><span class="blue-dark">diseño</span><span class="black">real</span><span class="blue-dark">para</span><span class="black">gente</span><span class="blue">real</span></h1>
             <h2>Estamos generando diseño</h2>
-             <div class="redes">
-             <img src="img/icofaceb.png">
-             <img src="img/icotwitter.png">
-             <img src="img/icoLinkedin.png">
+             <div class="redes"> <a href="https://www.facebook.com/pages/RLEAL-DESIGN/102131613212461?ref=hl"><img src="img/icon1.png"></a>
+               <a href="http://www.coroflot.com/RicardoLeal"><img src="img/icon2.png"></a>
+               <a href="https://co.linkedin.com/pub/ricardo-leal/21/498/279"><img src="img/icon3.png"></a>
              </div>
              
                         
