--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="background">
             <img src="img/logo.png" class="logo">
             <h1><span class="blue-dark">diseño</span><span class="black">real</span><span class="blue-dark">para</span><span class="black">gente</span><span class="blue">real</span></h1>
-            <h2>Estamos generando diseño</h2>
+            <h2>Estamos generando un nuevo diseño</h2>
              <div class="redes"> <a href="https://www.facebook.com/pages/RLEAL-DESIGN/102131613212461?ref=hl"><img src="img/icon1.png"></a>
                <a href="http://www.coroflot.com/RicardoLeal"><img src="img/icon2.png"></a>
                <a href="https://co.linkedin.com/pub/ricardo-leal/21/498/279"><img src="img/icon3.png"></a>
